# swsw

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  Makefile.orig  README.md  TAGS  alignment.c  alignment.h  score_matrix.c  score_matrix.h  sw.c  sw.h  swsw.h  test_alignment.c  test_score_matrix.c  test_sw.c  valgrind_suppressions.supp
docs/: array_diagram.monopic
include/swsw/: alignment.h  score_matrix.h  swsw.h
src/: score_matrix.c
